server.pem sample is now installed by default in /etc/vscp/certs making ssl connection available by default

--- a/debian_orig/rules
+++ b/debian_orig/rules
@@ -46,6 +46,7 @@ override_dh_auto_install:
 	install -m 644 debian/README-certs debian/vscpd/etc/vscp/certs/README
 	install -m 644 install_files/vscp.key debian/vscpd/etc/vscp/certs/vscp.key
 	install -m 644 install_files/unix/vscpd.conf debian/vscpd/etc/vscp/vscpd.conf
+	install -m 644 install_files/certs/server.pem debian/vscpd/etc/vscp/server.pem
 	install -d debian/vscpd/lib/systemd/system/
 	install -m 644  ./service/systemd/vscpd.service.notify debian/vscpd/lib/systemd/system/vscpd.service
 	install -d debian/vscpd/usr/share/man/man1/
