Fixed folder not in place problem

--- a/tests/vscp-client-ws2/CMakeLists.txt
+++ b/tests/vscp-client-ws2/CMakeLists.txt
@@ -56,14 +56,15 @@ add_executable(test
     ${PROJECT_SOURCE_DIR}/../../src/common/vscp_aes.c
     ${PROJECT_SOURCE_DIR}/../../src/common/fastpbkdf2.h
     ${PROJECT_SOURCE_DIR}/../../src/common/fastpbkdf2.c
-    ${PROJECT_SOURCE_DIR}/../../src/common/civetweb.h
-    ${PROJECT_SOURCE_DIR}/../../src/common/civetweb.c
+    ${PROJECT_SOURCE_DIR}/../../src/common/third_party/civetweb-1.13/include/civetweb.h
+    ${PROJECT_SOURCE_DIR}/../../src/common/third_party/civetweb-1.13/src/civetweb.c
     ${PROJECT_SOURCE_DIR}/../../src/common/third_party/nlohmann/json.hpp
     )
 
 target_include_directories(test PUBLIC 
     ${PROJECT_SOURCE_DIR}/../../src/vscp/common/
     ${PROJECT_SOURCE_DIR}/../../src/common/
+    ${PROJECT_SOURCE_DIR}/../../src/common/third_party/civetweb-1.13/include
     ${PROJECT_SOURCE_DIR}/../../src/common/third_party/nlohmann/
     ${OPENSSL_INCLUDE_DIR}
     ${EXPAT_INCLUDE_DIRS}
