UDP server reborn

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -169,6 +169,26 @@
         ssl_protocol_version="3"
         ssl_short_trust="false"
      />
+     
+    <udp enable="true"
+    	interface="udp://44444"
+    	user=""
+    	password=""
+    	bAllowUnsecure="true"
+    	bSendAck="true"
+    	filter=""
+    	mask=""
+    	guid="00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00" >
+
+    	<!-- Nodes that will receive VSCP Server events -->
+    	<rxnode enable="false"
+        	interface="udp://127.0.0.1:9999"
+        	filter=""
+        	mask=""
+        	encryption=""
+        	bSetBroadcast="false"
+    	/>
+    </udp>
 
     <!--
         Settings for the internal webserver.
