Removed csharp test

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -180,7 +180,7 @@
     	interface="udp://44444"
     	user="udp"
     	bAllowUnsecure="true"
-    	bSendAck="true"
+    	bAck="true"
     	filter=""
     	mask=""
     	guid="00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00" >
