Added base structure for mqtt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
     "cSpell.words": [
         "Grodans",
         "Hedman",
+        "MQTT",
         "Paradis",
         "VSCP",
         "akhe"
