--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -186,7 +186,7 @@
     	guid="00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00" >
 
     	<!-- Nodes that will receive VSCP Server events -->
-    	<rxnode enable="false"
+    	<client enable="false"
         	interface="udp://127.0.0.1:9999"
         	filter=""
         	mask=""
@@ -196,11 +196,11 @@
     </udp>
     
     <!--
-    	The MQTT clients (there can be any number) connect to an MQTT broker and
+    	The MQTT client(s) (there can be any number) connect to an MQTT broker and
     	publich events or subscribe to events.
     -->
     <mqtt enable="false">
-    	<mqtt-client 
+    	<client 
     		enable="false"
     		host="localhost"
     		port="1883"
@@ -216,7 +216,7 @@
     		capath=""
     		certfile=""
     		keyfile=""
-    		password=""
+    		xpassword=""
     	/>    	
     </mqtt>
 
