--- a/config.h.in
+++ b/config.h.in
@@ -61,6 +61,9 @@
 /* Define to 1 if you have the `m' library (-lm). */
 #undef HAVE_LIBM
 
+/* Define to 1 if you have the `mosquitto' library (-lmosquitto). */
+#undef HAVE_LIBMOSQUITTO
+
 /* Define to 1 if you have the `pthread' library (-lpthread). */
 #undef HAVE_LIBPTHREAD
 
