--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -35,20 +35,12 @@ WARNINGS = -Wall
 VERSION_DEFS = -DMAJOR_VERSION=$(MAJOR_VERSION) -DMINOR_VERSION=$(MINOR_VERSION) \
         -DRELEASE_VERSION=$(RELEASE_VERSION) -DBUILD_VERSION=$(BUILD_VERSION)
 
-CIVETWEB_FLAGS = -DUSE_IPV6 -DUSE_WEBSOCKET \
-	-DUSE_LUA -DLUA_COMPAT_APIINTCASTS -DLUA_COMPAT_LOG10 \
-	-DUSE_DUKTAPE -DUSE_ZLIB -DUSE_SERVER_STATS
-CFLAGS = -std=c99 @CFLAGS@ ${WARNINGS} -DCBC -DLUA_USE_POSIX -D_POSIX_SOURCE -I@top_srcdir@ \
+CFLAGS = -std=c99 @CFLAGS@ ${WARNINGS} -DCBC -D_POSIX_SOURCE -I@top_srcdir@ \
 	-I. \
 	-I../../common \
 	-I../../../common \
 	-I../../../common/third_party/nlohmann \
-	-I../../../common/third_party \
-	-I../../../common/third_party/lua-5.4.0/src/ \
-	-I../../../common/third_party/duktape-2.5.0/src/ \
-	-I../../../common/third_party/sqlite3-3.30.1/ \
-	-I ../../../common/third_party/civetweb-1.13/include/ \
-	-I ../../../common/third_party/civetweb-1.13/src/
+	-I../../../common/third_party
 CFLAGS += $(CIVETWEB_FLAGS) 
 CXXFLAGS = -std=c++11 @CXXFLAGS@ ${WARNINGS}
 CPPFLAGS = @CPPFLAGS@ ${WARNINGS} -fno-var-tracking-assignments -I@top_srcdir@ \
@@ -56,12 +48,7 @@ CPPFLAGS = @CPPFLAGS@ ${WARNINGS} -fno-var-tracking-assignments -I@top_srcdir@ \
 	-I../../common \
 	-I../../../common \
 	-I../../../common/third_party/nlohmann \
-	-I../../../common/third_party \
-	-I../../../common/third_party/lua-5.4.0/src/ \
-	-I../../../common/third_party/duktape-2.5.0/src/ \
-	-I../../../common/third_party/sqlite3-3.30.1/ \
-	-I ../../../common/third_party/civetweb-1.13/include/ \
-	-I ../../../common/third_party/civetweb-1.13/src/
+	-I../../../common/third_party
 CPPFLAGS += $(CIVETWEB_FLAGS) 
 
 LDFLAGS = @LDFLAGS@
@@ -88,44 +75,22 @@ DLLPREFIX = lib
 DESTDIR =
 
 VSCPD_OBJECTS =  vscpd.o \
-	clientlist.o \
 	controlobject.o \
-	tcpipsrv.o \
-	interfacelist.o \
-	userlist.o \
 	devicethread.o \
-	websrv.o \
-	websocketsrv.o \
-	restsrv.o\
-	civetweb.o \
 	vscphelper.o \
-	vscpremotetcpif.o \
-	automation.o \
 	devicelist.o \
 	mdf.o \
-	sockettcp.o \
 	guid.o \
 	register.o \
-	dllist.o \
 	configfile.o \
 	crc.o \
 	crc8.o \
 	randpassword.o \
-	duktape.o \
-	duktape_vscp_func.o \
-	duktape_vscp_wrkthread.o \
-	LuaXML_lib.o \
-	lua_all.o\
-	lua_vscp_wrkthread.o\
-	lua_vscp_func.o\
 	vscp_aes.o \
-	sqlite3.o \
-	sqlite3math.o \
 	fastpbkdf2.o \
 	vscpmd5.o \
 	vscpbase64.o \
 	vscpdatetime.o \
-	udpsrv.o \
     vscp_client_base.o \
 	vscp_client_mqtt.o \
 	mqtt.o
@@ -143,41 +108,20 @@ clientlist.o: ../../common/clientlist.cpp ../../common/clientlist.h
 controlobject.o: ../../common/controlobject.cpp ../../common/controlobject.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/controlobject.cpp -o $@
 
-tcpipsrv.o: ../../common/tcpipsrv.cpp ../../common/tcpipsrv.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/tcpipsrv.cpp -o $@
-
 interfacelist.o: ../../common/interfacelist.cpp ../../common/interfacelist.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/interfacelist.cpp -o $@
-
-userlist.o: ../../common/userlist.cpp ../../common/userlist.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/userlist.cpp -o $@
 
 devicethread.o: ../../common/devicethread.cpp ../../common/devicethread.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/devicethread.cpp -o $@
 
-websrv.o: ../../common/websrv.cpp ../../common/websrv.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/websrv.cpp -o $@
-
-websocketsrv.o: ../../common/websocketsrv.cpp ../../common/websocket.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/websocketsrv.cpp -o $@
-
-restsrv.o: ../../common/restsrv.cpp ../../common/restsrv.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/restsrv.cpp -o $@
-
 vscphelper.o: ../../common/vscphelper.cpp ../../common/vscphelper.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/vscphelper.cpp -o $@
-
-vscpremotetcpif.o: ../../common/vscpremotetcpif.cpp ../../common/vscpremotetcpif.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/vscpremotetcpif.cpp -o $@
 
 automation.o: ../../common/automation.cpp ../../common/automation.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/automation.cpp -o $@
 
 devicelist.o: ../../common/devicelist.cpp ../../common/devicelist.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/devicelist.cpp -o $@
-
-sockettcp.o: ../../../common/sockettcp.c ../../../common/sockettcp.h
-	$(CC) $(CFLAGS) -c ../../../common/sockettcp.c -o $@
 
 guid.o: ../../common/guid.cpp ../../common/guid.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/guid.cpp -o $@
@@ -193,9 +137,6 @@ configfile.o: ../../../common/configfile.cpp ../../../common/configfile.h
 
 vscpdatetime.o: ../../common/vscpdatetime.cpp ../../common/vscpdatetime.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/vscpdatetime.cpp -o $@
-
-udpsrv.o: ../../common/udpsrv.cpp ../../common/udpsrv.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/udpsrv.cpp -o $@
 
 vscp_client_base.o: ../../common/vscp_client_base.cpp ../../common/vscp_client_base.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/vscp_client_base.cpp -o $@
@@ -230,42 +171,6 @@ fastpbkdf2.o: ../../../common/fastpbkdf2.c ../../../common/fastpbkdf2.h
 vscpmd5.o: ../../../common/vscpmd5.c ../../../common/vscpmd5.h
 	$(CC) $(CFLAGS) -c ../../../common/vscpmd5.c -o $@
 
-civetweb.o: ../../../common/third_party/civetweb-1.13/src/civetweb.c ../../../common/third_party/civetweb-1.13/include/civetweb.h
-	$(CC) $(CFLAGS) $(CIVETWEB_FLAGS) -c ../../../common/third_party/civetweb-1.13/src/civetweb.c -o $@
-
-duktape.o: ../../../common/third_party/duktape-2.5.0/src/duktape.c ../../../common/third_party/duktape-2.5.0/src/duktape.h
-	$(CC) $(CFLAGS) -c ../../../common/third_party/duktape-2.5.0/src/duktape.c -o $@
-
-duktape_vscp_func.o: ../../common/duktape_vscp_func.cpp ../../common/duktape_vscp_func.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/duktape_vscp_func.cpp -o $@
-
-duktape_vscp_wrkthread.o: ../../common/duktape_vscp_wrkthread.cpp ../../common/duktape_vscp_wrkthread.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/duktape_vscp_wrkthread.cpp -o $@
-
-lsqlite3.o: ../../../common/third_party/lsqlite3.c
-	$(CC) $(CFLAGS)  -c ../../../common/third_party/lsqlite3.c -o $@
-
-lfs.o: ../../../common/third_party/lfs.c
-	$(CC) $(CFLAGS)  -c ../../../common/third_party/lfs.c -o $@
-
-LuaXML_lib.o: ../../../common/third_party/LuaXML_lib.c
-	$(CC) $(CFLAGS)  -c ../../../common/third_party/LuaXML_lib.c -o $@
-
-lua_all.o: ../../../common/third_party/lua_all.c
-	$(CC) $(CFLAGS)  -c ../../../common/third_party/lua_all.c -o $@
-
-lua_vscp_func.o: ../../common/lua_vscp_func.cpp ../../common/lua_vscp_func.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/lua_vscp_func.cpp -o $@
-
-lua_vscp_wrkthread.o: ../../common/lua_vscp_wrkthread.cpp ../../common/lua_vscp_wrkthread.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../common/lua_vscp_wrkthread.cpp -o $@
-
-sqlite3.o: ../../../common/third_party/sqlite3-3.30.1/sqlite3.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) -c  ../../../common/third_party/sqlite3-3.30.1/sqlite3.c -o $@
-
-sqlite3math.o: ../../../common/third_party/sqlite3math.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) -c  ../../../common/third_party/sqlite3math.c -o $@
-
 vscpd: $(VSCPD_OBJECTS)
 	$(CXX) -o $@ $(VSCPD_OBJECTS) $(LDFLAGS) $(EXTRALIBS)
 
@@ -294,11 +199,6 @@ install-folders:
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/drivers
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/drivers/level1
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/drivers/level2
-	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web
-	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web/html
-	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web/html/images
-	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web/html/css
-	$(INSTALL_PROGRAM) -d $(DESTDIR)/var/lib/vscp/web/html/js
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/usr/lib/systemd/system/
 
 install-startup-script:
