MQTT implemented in main loop

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -20,18 +20,24 @@
                    to drop privileges. 
                    Default: "vscp"
 
-      guid       - GUID for daemon - if all nills, "-" or not set and the mac addess 
-                   or the IP address of the computer will be used to calculate the 
-                   GUID for the daemon Apply for your own GUID series at 
-                   guid@vscp.org
+      guid       - GUID for daemon - if all nills, "-" or not set, the mac addess 
+                   or the IP address of the computer will be used to set the 
+                   GUID for the daemon. Running with root privileges is needed to 
+                   get the MAC address. Best is to set a GUID yourself.
+                   Apply for your own GUID series at guid@vscp.org
                    Default: "FF:FF:FF:FF:FF:FF:FF:F5:00:00:00:00:00:00:00:01"
 
-      servername - is a user name for the daemon whcih it use to greet users with.
+      servername - is a user name for the daemon which it use to greet users with.
                    Default: "The VSCP daemon" 
+
+      debug      - Enable debug definitions here. Se debug section of manual for information. 
+                   Debugging flags can also be set on the command line but this setting override
+	               any setting that is done there. This is why this section is commented out.
     -->
     <general runasuser="vscp"
              guid="FF:FF:FF:FF:FF:FF:FF:F5:00:00:00:00:00:00:00:01"
-             servername="The VSCP daemon"  
+             servername="The VSCP daemon" 
+             debug="0x00000000" 
     />
 
     <!--
@@ -50,7 +56,8 @@
     	    capath=""
     	    certfile=""
     	    keyfile=""
-    	    pwkeyfile="" >
+    	    pwkeyfile=""
+            format="json" >
         <subscribe topic="vscp/{{guid}}/#"
                         qos="0"
                         options="0" />
@@ -61,7 +68,7 @@
 	Enable debug definitions here. Se debug section of manual for information. 
         Debugging flags can also be set on the command line but this setting override
 	any setting that is done there. This is why this section is commented out.
-     
+    -> 
     <debug byte1="0"
 	   byte1="0"
            byte1="0"
@@ -112,7 +119,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -145,7 +153,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -180,7 +189,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -213,7 +223,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -258,7 +269,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -289,7 +301,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -320,7 +333,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -351,7 +365,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -382,7 +397,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -413,7 +429,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -444,7 +461,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
@@ -475,7 +493,8 @@
     	            capath=""
     	            certfile=""
     	            keyfile=""
-    	            pwkeyfile="" >
+    	            pwkeyfile=""
+                    format="json" >
                         <subscribe topic="vscp/{{guid}}/#"
                                         qos="0"
                                         options="0" />
